apps/homebridge/k8s-homebridge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebridge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homebridge
  template:
    metadata:
      labels:
        app: homebridge
    spec:
      containers:
      - name: homebridge
        image: homebridge/homebridge:latest
        volumeMounts:
        - name: homebridge-data
          mountPath: /homebridge
        livenessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - curl --fail localhost:8581 || exit 1
          initialDelaySeconds: 300
          periodSeconds: 60
          timeoutSeconds: 2
          failureThreshold: 5
        ports:
          - containerPort: 8581
            protocol: TCP
            name: homebridge-ui
          - containerPort: 51465
            protocol: TCP
            name: homebridge-mdns
      volumes:
      - name: homebridge-data
        persistentVolumeClaim:
          claimName: homebridge-pvc
      hostNetwork: true

---
apiVersion: v1
kind: Service
metadata:
  name: homebridge-ui
spec:
  ports:
    - port: 80
      targetPort: homebridge-ui
      protocol: TCP
