apps/homebridge/k8s-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homebridge-ui
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`homebridge.services.luke-domain.com`)
      priority: 10
      services:
        - name: homebridge-ui
          port: 80
